tests/cases/fail/infer_none_local.p4
def main() -> None:
    value = None
    print(value)
